[gd_scene load_steps=30 format=2]

[ext_resource path="res://scripts/Sprite.gd" type="Script" id=1]
[ext_resource path="res://images/player_sheet.png" type="Texture" id=2]
[ext_resource path="res://scripts/player.gd" type="Script" id=3]
[ext_resource path="res://sounds/pfft.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/grow.wav" type="AudioStream" id=5]
[ext_resource path="res://images/smallCritters.png" type="Texture" id=6]
[ext_resource path="res://sounds/bigCoconutSpit.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/chomp.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/ow.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/eba_money.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/eba_correct_answer.wav" type="AudioStream" id=11]
[ext_resource path="res://sounds/eb_impact4.wav" type="AudioStream" id=12]
[ext_resource path="res://sounds/bumpReverse.wav" type="AudioStream" id=13]
[ext_resource path="res://sounds/eba_swimming6.wav" type="AudioStream" id=14]
[ext_resource path="res://sounds/worm.wav" type="AudioStream" id=15]
[ext_resource path="res://sounds/drown.wav" type="AudioStream" id=16]
[ext_resource path="res://sounds/eb_powerup3.wav" type="AudioStream" id=17]

[sub_resource type="QuadMesh" id=1]

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0.0156863, 0.0156863, 0.0156863, 0 )

[sub_resource type="CylinderMesh" id=4]
radial_segments = 16
rings = 1

[sub_resource type="SpatialMaterial" id=5]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CSGCombiner:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "flicker"
length = 2.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CSGCombiner:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1, 1.2, 2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0.8, 0.8, 1 ), Vector3( 0.9, 0.9, 1 ), Vector3( 0.8, 0.8, 1 ), Vector3( 1, 1, 1 ), Vector3( 0.95, 0.95, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("headSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("headSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("headSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("eggSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("eggSprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("eggSprite:translation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("headSprite:offset")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("eggSprite:opacity")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("eggSprite:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("headSprite:opacity")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("eggSprite:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("eggSprite:frame_delay")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.4 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("eggSprite:offset")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 80 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("headSprite:frame")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("headSprite:frame_delay")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.4 ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("eggSprite:should_animate")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("eggSprite:frame")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6 ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("Sounds/DriftWaveSound:pitch_scale")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("Sounds/DriftWaveSound:playing")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("Sounds/HatchedSound:playing")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
resource_name = "ateWhaleFall"
tracks/0/type = "value"
tracks/0/path = NodePath("headSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.376471, 0.376471, 0.376471, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("headSprite:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1.2, 1.2, 1 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "eggFloatDown"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("eggSprite:frame_delay")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("eggSprite:offset")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.1, 1.25, 1.4, 1.55, 1.7, 1.85, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 80 ), Vector2( 10, 74.88 ), Vector2( 15, 69.211 ), Vector2( 10, 63.127 ), Vector2( 0, 56.55 ), Vector2( -10, 49.362 ), Vector2( -15, 41.399 ), Vector2( -10, 32.43 ), Vector2( 0, 22.157 ), Vector2( 5, 10.436 ), Vector2( 0, 0 ), Vector2( -2, -2 ), Vector2( -1, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("eggSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("headSprite:opacity")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("headSprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("eggSprite:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.25, 1.4, 1.55, 1.7, 1.85 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0.9, 1.1, 1 ), Vector3( 1, 1, 1 ), Vector3( 0.9, 1.1, 1 ), Vector3( 1, 1, 1 ), Vector3( 0.9, 1.1, 1 ), Vector3( 1, 1, 1 ), Vector3( 1.2, 0.8, 1 ), Vector3( 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("eggSprite:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("eggSprite:should_animate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("eggSprite:frame")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( -0.05, 0.1, 0.25, 0.4, 0.55, 0.7, 0.9, 1.2, 1.5, 1.75, 1.85, 2.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 6, 7, 6, 7, 6, 7, 6, 8, 6, 6 ]
}
tracks/9/type = "method"
tracks/9/path = NodePath(".")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.3, 0.75, 1.1, 1.45, 1.8, 2, 2.2, 2.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawnEggBubble"
}, {
"args": [  ],
"method": "spawnEggBubble"
}, {
"args": [  ],
"method": "spawnEggBubble"
}, {
"args": [  ],
"method": "spawnEggBubble"
}, {
"args": [  ],
"method": "spawnEggBubble"
}, {
"args": [  ],
"method": "spawnEggBubble"
}, {
"args": [  ],
"method": "spawnEggBubble"
}, {
"args": [  ],
"method": "spawnEggBubble"
}, {
"args": [  ],
"method": "spawnEggBubble"
} ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("eggSprite:opacity")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("eggSprite:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "growFromEgg"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("headSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("eggSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("eggSprite:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0.9, 0.9, 1 ), Vector3( 1.75, 1.75, 1 ), Vector3( 1.3, 1.3, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("eggSprite:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("headSprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3, 0.45, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.75, 0.75, 1 ), Vector3( 0.9, 0.9, 1 ), Vector3( 1.3, 1.3, 1 ), Vector3( 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("eggSprite:opacity")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 1.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("eggSprite:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.423529, 0.662745, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.423529, 0.662745, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("headSprite:opacity")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0, 1.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("headSprite:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("eggSprite:frame_delay")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.2 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("eggSprite:offset")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("headSprite:frame")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("headSprite:frame_delay")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0.2, 0.4 ]
}
tracks/13/type = "method"
tracks/13/path = NodePath(".")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawnEggBubble"
}, {
"args": [  ],
"method": "spawnEggBubble"
}, {
"args": [  ],
"method": "finishHatchAnimation"
}, {
"args": [  ],
"method": "spawnEggBubble"
}, {
"args": [  ],
"method": "spawnEggBubble"
} ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("eggSprite:frame")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.25, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 8, 6, 7 ]
}

[sub_resource type="Animation" id=10]
resource_name = "hurtByParasite"
tracks/0/type = "value"
tracks/0/path = NodePath("headSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 1, 0.054902, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("headSprite:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1.2, 1.2, 1 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "stunned"
length = 0.4
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "unstunned"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("headSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 0, -1 ), Vector2( -1, 1 ), Vector2( 0, -1 ), Vector2( 0, 0 ) ]
}

[node name="player" type="Spatial"]
script = ExtResource( 3 )

[node name="cameraTarget" type="Spatial" parent="."]

[node name="headSprite" type="Sprite3D" parent="."]
pixel_size = 0.0625
texture = ExtResource( 2 )
hframes = 4
vframes = 8
script = ExtResource( 1 )

[node name="eggSprite" type="Sprite3D" parent="."]
visible = false
offset = Vector2( 0, 80 )
pixel_size = 0.0625
texture = ExtResource( 6 )
hframes = 4
vframes = 4
frame = 6
script = ExtResource( 1 )
should_animate = false

[node name="parasite" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 1 )
visible = false
pixel_size = 0.0313
texture = ExtResource( 6 )
hframes = 4
vframes = 4
frame = 4
script = ExtResource( 1 )

[node name="CSGCombiner" type="CSGCombiner" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4 )
calculate_tangents = false

[node name="CSGMesh" type="CSGMesh" parent="CSGCombiner"]
transform = Transform( 35, 0, 0, 0, 28, 0, 0, 0, 1, 0, 0, 0 )
generate_lightmap = false
mesh = SubResource( 1 )
material = SubResource( 8 )

[node name="PlayerLight" type="CSGMesh" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
operation = 2
mesh = SubResource( 4 )
material = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CSGCombiner"]
root_node = NodePath("../..")
autoplay = "flicker"
anims/RESET = SubResource( 6 )
anims/flicker = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
anims/ateWhaleFall = SubResource( 11 )
anims/eggFloatDown = SubResource( 14 )
anims/growFromEgg = SubResource( 12 )
anims/hurtByParasite = SubResource( 10 )
anims/stunned = SubResource( 13 )

[node name="Sounds" type="Spatial" parent="."]

[node name="PfftSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )
volume_db = -25.0

[node name="GrowSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="ChompSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )
volume_db = -15.0

[node name="CoolSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )
volume_db = -30.0
pitch_scale = 0.8

[node name="ApplauseSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 11 )
volume_db = -28.0

[node name="SpitSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )
volume_db = -13.0

[node name="OwSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )
volume_db = 5.0
pitch_scale = 0.5

[node name="BumpSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 12 )
volume_db = -18.0
pitch_scale = 0.8

[node name="ChargeUpSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 13 )
volume_db = -12.0
pitch_scale = 0.8

[node name="ChargeReadySound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 15 )
volume_db = -15.0
pitch_scale = 1.3

[node name="ChargeStartSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 14 )
volume_db = -7.0
pitch_scale = 1.4

[node name="ChargeSlowdown" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 16 )
volume_db = -20.0
pitch_scale = 0.6

[node name="DriftWaveSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 14 )
volume_db = -15.0
pitch_scale = 0.5

[node name="HatchedSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 17 )
volume_db = -25.0
pitch_scale = 0.9
